# caden-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/commands/: check.md  run-demo.md  run.md  spec-audit.md  status.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benches/: verification.rs
docs/: architecture.md  security-considerations.md  webauthn-primer.md
examples/: demo.rs  generate_vectors.rs  server.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_authentication/: seed_basic_assertion
fuzz/corpus/fuzz_registration/: seed_none_attestation
fuzz/fuzz_targets/: fuzz_authentication.rs  fuzz_registration.rs
src/: algorithm.rs  attestation.rs  authentication.rs  authenticator_data.rs  challenge.rs  client_data.rs  credential.rs  crypto.rs  der.rs  error.rs  extensions.rs  lib.rs  metadata.rs  options.rs  registration.rs
tests/: helpers.rs  integration.rs
tests/vectors/: authentication.json  registration.json
