[package]
name = "caden"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
description = "Server-side WebAuthn/Passkey library implementing the W3C WebAuthn Level 2 specification"
keywords = ["webauthn", "passkey", "fido", "authentication", "security"]
categories = ["authentication", "cryptography", "web-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ivanxie/caden-rs"
documentation = "https://docs.rs/caden"

[lib]
# Keep the Rust crate name as `webauthn` so existing code and examples import
# `use webauthn::...` while the crates.io package name is `webauthn-rs-demo`.
name = "webauthn"

[features]
# Enable Serialize + Deserialize derives on all public types (Credential,
# PublicKey, Challenge, RegistrationResult, AuthenticationResult,
# AttestationType, WebAuthnError). Vec<u8> fields are encoded as compact byte
# sequences via serde_bytes rather than sequences of u8 integers.
serde = ["dep:serde_bytes"]

[dependencies]
# Cryptography: ECDSA P-256, SHA-256, secure random
ring = "0.17"

# CBOR: authenticator data and attestation objects are CBOR-encoded
ciborium = "0.2"

# JSON + serde: client data JSON parsing (always required; not optional)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Efficient byte-array serialization for Vec<u8> fields (optional)
serde_bytes = { version = "0.11", optional = true }

# Base64URL encoding used throughout WebAuthn wire format
base64 = "0.22"

# Structured error types for the library
thiserror = "1"

# X.509 certificate parsing and signature verification for attestation chain validation.
# The "verify" feature adds ring-backed signature checking used in verify_x5c_chain.
x509-parser = { version = "0.16", features = ["verify"] }

[dev-dependencies]
# Ergonomic error handling for the demo binary and integration tests
anyhow = "1"
# X.509 certificate generation for attestation chain verification tests
rcgen = "0.13"
# HTTP server for the server example
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "generate_vectors"
path = "examples/generate_vectors.rs"

[[example]]
name = "server"
path = "examples/server.rs"
required-features = []
